Bug 349675 - Commands such as /fortune do not send messages
Summary: Commands such as /fortune do not send messages
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-28 00:49 UTC by Chris K
Modified: 2024-05-21 23:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.10.24020
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris K 2015-06-28 00:49:24 UTC
If I type /fortune in the input box while on a channel, the box goes blank as I sent it, but nothing is sent. If I run /cmd echo Hi, same thing. If I run /cmd konsole, same thing, except konsole pops up.

It appears that the scripts run, but their output does not go into Konversation.

Reproducible: Always

Steps to Reproduce:
1. Connect to a channel
2. Type /fortune
3. Press Enter

Actual Results:  
Nothing is Sent to Channel

Expected Results:  
A whimsical message is sent to channel.
Comment 1 Justin Zobel 2020-12-02 06:22:23 UTC
Thanks for the report, Chris. I've just tested this and I get output in the channel.

Can you please test and confirm if this issue is still occurring or if this bug report can be marked as resolved.

I have set the bug status to "needsinfo" pending your response, please change back to "reported" or "resolved" when you respond, thank you.
Comment 2 Bug Janitor Service 2020-12-17 04:34:02 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 argonel 2020-12-17 06:49:09 UTC
This sounds like the qtchooser/qdbus issue.
Comment 4 argonel 2024-02-22 06:52:42 UTC
Git commit b7a551d6fd07c901d81b25f46f0782a9846c7c23 by Eli MacKenzie.
Committed on 22/02/2024 at 05:28.
Pushed by argonel into branch 'release/24.02'.

Provide scripts with an env var to find qdbus

While the qdbus tool has been a RUNTIME dependency of Konversation since 2008,
most distros didn't add a requirement. Given there's no standard way to
advertise runtime deps, qdbus is now a build dep in addition to being a
runtime dep.

Unfortunately qdbus doesn't have a consistent name nor location. This attempts
to find it by asking Qt where the binaries probably got installed and then
tries a few possible names.

A script run from inside Konversation now expects to receive an environment
variable "KONVERSATION_DBUS_BIN" that is the full pathname of the actual
program. This is set by the script launcher if it isn't present in the
environment on launch.
FIXED-IN: 1.10.24020

M  +11   -0    CMakeLists.txt
M  +1    -0    ChangeLog
M  +2    -0    NEWS
M  +5    -4    data/scripting_support/python/konversation/dbus.py
M  +2    -2    data/scripting_support/python/konversation/i18n.py
M  +2    -1    data/scripts/fortune
M  +2    -2    data/scripts/gauge
M  +3    -2    data/scripts/media
M  +1    -1    data/scripts/sayclip
M  +2    -2    data/scripts/tinyurl
M  +7    -5    data/scripts/uptime
M  +13   -0    src/CMakeLists.txt
A  +1    -0    src/konvi_qdbus.h.in
M  +3    -0    src/scriptlauncher.cpp

https://invent.kde.org/network/konversation/-/commit/b7a551d6fd07c901d81b25f46f0782a9846c7c23
Comment 5 argonel 2024-05-21 23:50:35 UTC
Git commit a941c4fd4faf45cb8a9bdda1b13fbc035cad4335 by Eli MacKenzie.
Committed on 21/05/2024 at 23:50.
Pushed by argonel into branch 'master'.

Provide scripts with an env var to find qdbus

While the qdbus tool has been a RUNTIME dependency of Konversation since 2008,
most distros didn't add a requirement. Given there's no standard way to
advertise runtime deps, qdbus is now a build dep in addition to being a
runtime dep.

Unfortunately qdbus doesn't have a consistent name nor location. This attempts
to find it by asking Qt where the binaries probably got installed and then
tries a few possible names.

A script run from inside Konversation now expects to receive an environment
variable "KONVERSATION_DBUS_BIN" that is the full pathname of the actual
program. This is set by the script launcher if it isn't present in the
environment on launch.
FIXED-IN: 1.10.24020

M  +11   -0    CMakeLists.txt
M  +1    -0    ChangeLog
M  +2    -0    NEWS
M  +5    -4    data/scripting_support/python/konversation/dbus.py
M  +2    -2    data/scripting_support/python/konversation/i18n.py
M  +2    -1    data/scripts/fortune
M  +2    -2    data/scripts/gauge
M  +3    -2    data/scripts/media
M  +1    -1    data/scripts/sayclip
M  +2    -2    data/scripts/tinyurl
M  +7    -5    data/scripts/uptime
M  +13   -0    src/CMakeLists.txt
A  +1    -0    src/konvi_qdbus.h.in
M  +3    -0    src/scriptlauncher.cpp

https://invent.kde.org/network/konversation/-/commit/a941c4fd4faf45cb8a9bdda1b13fbc035cad4335
Comment 6 argonel 2024-05-21 23:50:49 UTC
Git commit 9f0a87cbc0376bb188076c9c23c09e337754e9ce by Eli MacKenzie.
Committed on 21/05/2024 at 23:49.
Pushed by argonel into branch 'release/24.05'.

Provide scripts with an env var to find qdbus

While the qdbus tool has been a RUNTIME dependency of Konversation since 2008,
most distros didn't add a requirement. Given there's no standard way to
advertise runtime deps, qdbus is now a build dep in addition to being a
runtime dep.

Unfortunately qdbus doesn't have a consistent name nor location. This attempts
to find it by asking Qt where the binaries probably got installed and then
tries a few possible names.

A script run from inside Konversation now expects to receive an environment
variable "KONVERSATION_DBUS_BIN" that is the full pathname of the actual
program. This is set by the script launcher if it isn't present in the
environment on launch.
FIXED-IN: 1.10.24020

M  +11   -0    CMakeLists.txt
M  +1    -0    ChangeLog
M  +2    -0    NEWS
M  +5    -4    data/scripting_support/python/konversation/dbus.py
M  +2    -2    data/scripting_support/python/konversation/i18n.py
M  +2    -1    data/scripts/fortune
M  +2    -2    data/scripts/gauge
M  +3    -2    data/scripts/media
M  +1    -1    data/scripts/sayclip
M  +2    -2    data/scripts/tinyurl
M  +7    -5    data/scripts/uptime
M  +13   -0    src/CMakeLists.txt
A  +1    -0    src/konvi_qdbus.h.in
M  +3    -0    src/scriptlauncher.cpp

https://invent.kde.org/network/konversation/-/commit/9f0a87cbc0376bb188076c9c23c09e337754e9ce